5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1664_1391.log
== TEST (2019-04-16 11:04:40) 
-- CODE:
c = float(input("consume em kwh"))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(total)
else:
	total = 0.75*c + 16
	print(total)
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:17) 
-- CODE:
c = float(input("consume em kwh: "))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(round(total, 2)
else:
	total = 0.75*c + 16
	print(round(total, 2)
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:28) 
-- CODE:
c = float(input("consume em kwh: "))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(round(total, 2))
else:
	total = 0.75*c + 16
	print(round(total, 2))
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:39) 
-- CODE:
c = float(input("consume em kwh: "))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(round(total, 2))
else:
	total = 0.75*c + 16
	print(round(total, 2))
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:49) 
-- CODE:
c = float(input("consume em kwh: "))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(round(total, 2))
else:
	total = 0.75*c + 16
	print(round(total, 2))
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:06:22) 
-- CODE:
c = float(input("consume em kwh: "))
if (c > 0 and c < 150):
	total = (0.60*c) + 5.00
	print(round(total, 2))
else:
	total = 0.75*c + 16
	print(round(total, 2))
-- EXECUTION TIME:
0.173144
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
